# Human_or_Ai_Makale

human-or-ai/: README.md  pyproject.toml  requirements.txt
human-or-ai/app/: streamlit_app.py
human-or-ai/docs/: contract.md  test_cases.md
human-or-ai/src/human_or_ai/: config.py
human-or-ai/src/human_or_ai/data_clean/: build_dataset.py  clean.py
human-or-ai/src/human_or_ai/data_collect/: arxiv_collect.py  generate_ai_summaries.py
human-or-ai/src/human_or_ai/predict/: predict.py
human-or-ai/src/human_or_ai/train/: train_models.py
human-or-ai/tests/: test_clean.py  test_predict.py
